--- a/NickProjects/InventoryProject/InventoryProject/InventoryProject.vcxproj
+++ b/NickProjects/InventoryProject/InventoryProject/InventoryProject.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{260d3b80-ea4b-4754-b043-aac461627739}</ProjectGuid>
-    <RootNamespace>NewProject</RootNamespace>
+    <ProjectGuid>{a52aa7b1-9c6d-4a7d-b6e3-2fe9563c5fbf}</ProjectGuid>
+    <RootNamespace>InventoryProject</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>InventoryProject</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
