--- a/NickProjects/InventoryProject/InventoryProject/InventoryProject.vcxproj
+++ b/NickProjects/InventoryProject/InventoryProject/InventoryProject.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClInclude Include="IItem.h" />
     <ClInclude Include="Inventory.h" />
+    <ClInclude Include="ItemType.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
