--- a/NickProjects/InventoryProject/InventoryProject/InventoryProject.vcxproj.filters
+++ b/NickProjects/InventoryProject/InventoryProject/InventoryProject.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="IItem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ItemType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
