--- a/JoshProjects/GraphicsProject/JAGEngine/JAGEngine.vcxproj.filters
+++ b/JoshProjects/GraphicsProject/JAGEngine/JAGEngine.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="JAGEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Camera2D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="JAGEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera2D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
