OpenGL Debugging, InputManager, & Projectiles

--- a/JoshProjects/GraphicsProject/GraphicsProject/GraphicsProject.vcxproj.filters
+++ b/JoshProjects/GraphicsProject/GraphicsProject/GraphicsProject.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="MainGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainGame.h">
@@ -28,6 +31,9 @@
     </ClInclude>
     <ClInclude Include="Vertex.h">
       <Filter>Resource Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bullet.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
