--- a/JoshProjects/GraphicsProject/GraphicsProject/GraphicsProject.vcxproj
+++ b/JoshProjects/GraphicsProject/GraphicsProject/GraphicsProject.vcxproj
@@ -134,10 +134,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainGame.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="MainGame.h" />
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
