--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,217 @@ vcpkg_installed/
 *.ipdb
 *.obj.enc
 *.FileListAbsolute.txt
+JoshProjects/GraphicsProject/deps/imgui-master/.editorconfig
+JoshProjects/GraphicsProject/deps/imgui-master/.gitattributes
+JoshProjects/GraphicsProject/deps/imgui-master/.github/FUNDING.yml
+JoshProjects/GraphicsProject/deps/imgui-master/.github/ISSUE_TEMPLATE/config.yml
+JoshProjects/GraphicsProject/deps/imgui-master/.github/ISSUE_TEMPLATE/issue_template.yml
+JoshProjects/GraphicsProject/deps/imgui-master/.github/pull_request_template.md
+JoshProjects/GraphicsProject/deps/imgui-master/.github/workflows/build.yml
+JoshProjects/GraphicsProject/deps/imgui-master/.github/workflows/manual.yml
+JoshProjects/GraphicsProject/deps/imgui-master/.github/workflows/scheduled.yml
+JoshProjects/GraphicsProject/deps/imgui-master/.github/workflows/static-analysis.yml
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_allegro5.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_allegro5.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_android.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_android.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_dx10.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_dx10.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_dx11.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_dx11.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_dx12.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_dx12.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_dx9.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_dx9.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_glfw.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_glfw.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_glut.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_glut.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_metal.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_metal.mm
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_opengl2.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_opengl2.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_opengl3.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_opengl3.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_opengl3_loader.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_osx.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_osx.mm
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_sdl2.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_sdl2.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_sdl3.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_sdl3.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_sdlrenderer2.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_sdlrenderer2.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_sdlrenderer3.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_sdlrenderer3.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_vulkan.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_vulkan.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_wgpu.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_wgpu.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_win32.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/backends/imgui_impl_win32.h
+JoshProjects/GraphicsProject/deps/imgui-master/backends/vulkan/generate_spv.sh
+JoshProjects/GraphicsProject/deps/imgui-master/backends/vulkan/glsl_shader.frag
+JoshProjects/GraphicsProject/deps/imgui-master/backends/vulkan/glsl_shader.vert
+JoshProjects/GraphicsProject/deps/imgui-master/docs/BACKENDS.md
+JoshProjects/GraphicsProject/deps/imgui-master/docs/CHANGELOG.txt
+JoshProjects/GraphicsProject/deps/imgui-master/docs/CONTRIBUTING.md
+JoshProjects/GraphicsProject/deps/imgui-master/docs/EXAMPLES.md
+JoshProjects/GraphicsProject/deps/imgui-master/docs/FAQ.md
+JoshProjects/GraphicsProject/deps/imgui-master/docs/FONTS.md
+JoshProjects/GraphicsProject/deps/imgui-master/docs/README.md
+JoshProjects/GraphicsProject/deps/imgui-master/docs/TODO.txt
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_allegro5/example_allegro5.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_allegro5/example_allegro5.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_allegro5/imconfig_allegro5.h
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_allegro5/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_allegro5/README.md
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_android_opengl3/android/app/build.gradle
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_android_opengl3/android/app/src/main/AndroidManifest.xml
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_android_opengl3/android/app/src/main/java/MainActivity.kt
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_android_opengl3/android/build.gradle
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_android_opengl3/android/settings.gradle
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_android_opengl3/CMakeLists.txt
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_android_opengl3/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_apple_metal/example_apple_metal.xcodeproj/project.pbxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_apple_metal/iOS/Info-iOS.plist
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_apple_metal/iOS/LaunchScreen.storyboard
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_apple_metal/macOS/Info-macOS.plist
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_apple_metal/macOS/MainMenu.storyboard
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_apple_metal/main.mm
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_apple_metal/README.md
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_apple_opengl2/example_apple_opengl2.xcodeproj/project.pbxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_apple_opengl2/main.mm
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_metal/main.mm
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_metal/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl2/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl2/example_glfw_opengl2.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl2/example_glfw_opengl2.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl2/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl2/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl3/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl3/example_glfw_opengl3.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl3/example_glfw_opengl3.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl3/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl3/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_opengl3/Makefile.emscripten
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_vulkan/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_vulkan/build_win64.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_vulkan/CMakeLists.txt
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_vulkan/example_glfw_vulkan.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_vulkan/example_glfw_vulkan.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_vulkan/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_wgpu/CMakeLists.txt
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_wgpu/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_wgpu/Makefile.emscripten
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glfw_wgpu/README.md
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glut_opengl2/example_glut_opengl2.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glut_opengl2/example_glut_opengl2.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glut_opengl2/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_glut_opengl2/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_null/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_null/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_null/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_directx11/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_directx11/example_sdl2_directx11.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_directx11/example_sdl2_directx11.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_directx11/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_metal/main.mm
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_metal/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl2/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl2/example_sdl2_opengl2.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl2/example_sdl2_opengl2.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl2/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl2/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl2/README.md
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl3/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl3/example_sdl2_opengl3.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl3/example_sdl2_opengl3.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl3/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl3/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl3/Makefile.emscripten
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_opengl3/README.md
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_sdlrenderer2/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_sdlrenderer2/example_sdl2_sdlrenderer2.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_sdlrenderer2/example_sdl2_sdlrenderer2.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_sdlrenderer2/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_sdlrenderer2/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_sdlrenderer2/README.md
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_vulkan/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_vulkan/example_sdl2_vulkan.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_vulkan/example_sdl2_vulkan.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl2_vulkan/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_opengl3/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_opengl3/example_sdl3_opengl3.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_opengl3/example_sdl3_opengl3.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_opengl3/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_opengl3/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_opengl3/Makefile.emscripten
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_opengl3/README.md
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_sdlrenderer3/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_sdlrenderer3/example_sdl3_sdlrenderer3.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_sdlrenderer3/example_sdl3_sdlrenderer3.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_sdlrenderer3/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_sdl3_sdlrenderer3/Makefile
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx10/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx10/example_win32_directx10.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx10/example_win32_directx10.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx10/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx11/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx11/example_win32_directx11.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx11/example_win32_directx11.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx11/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx12/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx12/example_win32_directx12.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx12/example_win32_directx12.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx12/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx9/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx9/example_win32_directx9.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx9/example_win32_directx9.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_directx9/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_opengl3/build_mingw.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_opengl3/build_win32.bat
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_opengl3/example_win32_opengl3.vcxproj
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_opengl3/example_win32_opengl3.vcxproj.filters
+JoshProjects/GraphicsProject/deps/imgui-master/examples/example_win32_opengl3/main.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/examples/imgui_examples.sln
+JoshProjects/GraphicsProject/deps/imgui-master/examples/libs/emscripten/emscripten_mainloop_stub.h
+JoshProjects/GraphicsProject/deps/imgui-master/examples/libs/emscripten/shell_minimal.html
+JoshProjects/GraphicsProject/deps/imgui-master/examples/libs/glfw/COPYING.txt
+JoshProjects/GraphicsProject/deps/imgui-master/examples/libs/glfw/include/GLFW/glfw3.h
+JoshProjects/GraphicsProject/deps/imgui-master/examples/libs/glfw/include/GLFW/glfw3native.h
+JoshProjects/GraphicsProject/deps/imgui-master/examples/libs/usynergy/README.txt
+JoshProjects/GraphicsProject/deps/imgui-master/examples/libs/usynergy/uSynergy.c
+JoshProjects/GraphicsProject/deps/imgui-master/examples/libs/usynergy/uSynergy.h
+JoshProjects/GraphicsProject/deps/imgui-master/examples/README.txt
+JoshProjects/GraphicsProject/deps/imgui-master/imconfig.h
+JoshProjects/GraphicsProject/deps/imgui-master/imgui.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/imgui.h
+JoshProjects/GraphicsProject/deps/imgui-master/imgui_demo.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/imgui_draw.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/imgui_internal.h
+JoshProjects/GraphicsProject/deps/imgui-master/imgui_tables.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/imgui_widgets.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/imstb_rectpack.h
+JoshProjects/GraphicsProject/deps/imgui-master/imstb_textedit.h
+JoshProjects/GraphicsProject/deps/imgui-master/imstb_truetype.h
+JoshProjects/GraphicsProject/deps/imgui-master/LICENSE.txt
+JoshProjects/GraphicsProject/deps/imgui-master/misc/cpp/imgui_stdlib.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/misc/cpp/imgui_stdlib.h
+JoshProjects/GraphicsProject/deps/imgui-master/misc/cpp/README.txt
+JoshProjects/GraphicsProject/deps/imgui-master/misc/debuggers/imgui.gdb
+JoshProjects/GraphicsProject/deps/imgui-master/misc/debuggers/imgui.natstepfilter
+JoshProjects/GraphicsProject/deps/imgui-master/misc/debuggers/imgui.natvis
+JoshProjects/GraphicsProject/deps/imgui-master/misc/debuggers/README.txt
+JoshProjects/GraphicsProject/deps/imgui-master/misc/fonts/binary_to_compressed_c.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/misc/fonts/Cousine-Regular.ttf
+JoshProjects/GraphicsProject/deps/imgui-master/misc/fonts/DroidSans.ttf
+JoshProjects/GraphicsProject/deps/imgui-master/misc/fonts/Karla-Regular.ttf
+JoshProjects/GraphicsProject/deps/imgui-master/misc/fonts/ProggyClean.ttf
+JoshProjects/GraphicsProject/deps/imgui-master/misc/fonts/ProggyTiny.ttf
+JoshProjects/GraphicsProject/deps/imgui-master/misc/fonts/Roboto-Medium.ttf
+JoshProjects/GraphicsProject/deps/imgui-master/misc/freetype/imgui_freetype.cpp
+JoshProjects/GraphicsProject/deps/imgui-master/misc/freetype/imgui_freetype.h
+JoshProjects/GraphicsProject/deps/imgui-master/misc/freetype/README.md
+JoshProjects/GraphicsProject/deps/imgui-master/misc/README.txt
+JoshProjects/GraphicsProject/deps/imgui-master/misc/single_file/imgui_single_file.h
