--- a/NickProjects/graphicsTutorials/Bengine/Bengine.vcxproj
+++ b/NickProjects/graphicsTutorials/Bengine/Bengine.vcxproj
@@ -71,13 +71,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)deps/include/;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)deps/include/;$(SolutionDir)deps/include/ImGui/;$(SolutionDir)deps/SDL/include/;$(IncludePath)</IncludePath>
     <LibraryPath>
     </LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LibraryPath />
-    <IncludePath>$(SolutionDir)deps/include/;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)deps/include/;$(SolutionDir)deps/include/ImGui/;$(SolutionDir)deps/SDL/include/;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Label="Vcpkg">
     <VcpkgEnableManifest>true</VcpkgEnableManifest>
@@ -116,6 +116,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -133,6 +134,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -145,12 +147,20 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\deps\include\ImGui\backends\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="..\deps\include\ImGui\backends\imgui_impl_sdl2.cpp" />
+    <ClCompile Include="..\deps\include\ImGui\imgui.cpp" />
+    <ClCompile Include="..\deps\include\ImGui\imgui_demo.cpp" />
+    <ClCompile Include="..\deps\include\ImGui\imgui_draw.cpp" />
+    <ClCompile Include="..\deps\include\ImGui\imgui_tables.cpp" />
+    <ClCompile Include="..\deps\include\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="AudioEngine.cpp" />
     <ClCompile Include="Bengine.cpp" />
     <ClCompile Include="Camera2D.cpp" />
     <ClCompile Include="BengineErrors.cpp" />
     <ClCompile Include="GLSLProgram.cpp" />
     <ClCompile Include="ImageLoader.cpp" />
+    <ClCompile Include="ImGuiManager.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="IOManager.cpp" />
     <ClCompile Include="ParticleBatch2D.cpp" />
@@ -165,6 +175,8 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\deps\include\ImGui\imgui.h" />
+    <ClInclude Include="..\deps\include\ImGui\imgui_internal.h" />
     <ClInclude Include="AudioEngine.h" />
     <ClInclude Include="Bengine.h" />
     <ClInclude Include="Camera2D.h" />
@@ -172,6 +184,7 @@
     <ClInclude Include="GLSLProgram.h" />
     <ClInclude Include="GLTexture.h" />
     <ClInclude Include="ImageLoader.h" />
+    <ClInclude Include="ImGuiManager.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="IOManager.h" />
     <ClInclude Include="ParticleBatch2D.h" />
