--- a/JoshProjects/GraphicsProject/BallGame/BallGame.vcxproj.filters
+++ b/JoshProjects/GraphicsProject/BallGame/BallGame.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="MainGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BallGameCamera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
