--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "NickProjects/graphicsTutorials/deps/include/ImGui"]
 	path = NickProjects/graphicsTutorials/deps/include/ImGui
 	url = https://github.com/ocornut/imgui.git
+[submodule "Box2D"]
+	path = Box2D
+	url = https://github.com/erincatto/box2d.git
