--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Box2D"]
 	path = Box2D
 	url = https://github.com/erincatto/box2d.git
+[submodule "NickProjects/graphicsTutorials/deps/Box2D"]
+	path = NickProjects/graphicsTutorials/deps/Box2D
+	url = https://github.com/erincatto/box2d.git
