--- a/NickProjects/graphicsTutorials/NinjaPlatformer/NinjaPlatformer.vcxproj
+++ b/NickProjects/graphicsTutorials/NinjaPlatformer/NinjaPlatformer.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{95c81241-d475-41a0-9b30-db513308716e}</ProjectGuid>
-    <RootNamespace>Bengine</RootNamespace>
+    <ProjectGuid>{7bcbd2ca-ae72-4b7b-b224-13f5f1de4210}</ProjectGuid>
+    <RootNamespace>NinjaPlatformer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -40,13 +40,13 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -71,13 +71,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)deps/include/;$(SolutionDir)deps/include/ImGui/;$(SolutionDir)deps/SDL/include/;$(IncludePath)</IncludePath>
-    <LibraryPath>
-    </LibraryPath>
+    <IncludePath>$(SolutionDir)deps/include/;$(SolutionDir);;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)deps/lib/;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LibraryPath />
-    <IncludePath>$(SolutionDir)deps/include/;$(SolutionDir)deps/include/ImGui/;$(SolutionDir)deps/SDL/include/;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)deps/include/;$(SolutionDir);;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)deps/lib/;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Label="Vcpkg">
     <VcpkgEnableManifest>true</VcpkgEnableManifest>
@@ -121,10 +120,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_mixer.lib;opengl32.lib;Bengine.lib;box2dd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
-    <Lib>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -141,68 +138,19 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_mixer.lib;opengl32.lib;Bengine.lib;box2dd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
-    <Lib>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\deps\include\ImGui\backends\imgui_impl_opengl3.cpp" />
-    <ClCompile Include="..\deps\include\ImGui\backends\imgui_impl_sdl2.cpp" />
-    <ClCompile Include="..\deps\include\ImGui\imgui.cpp" />
-    <ClCompile Include="..\deps\include\ImGui\imgui_demo.cpp" />
-    <ClCompile Include="..\deps\include\ImGui\imgui_draw.cpp" />
-    <ClCompile Include="..\deps\include\ImGui\imgui_tables.cpp" />
-    <ClCompile Include="..\deps\include\ImGui\imgui_widgets.cpp" />
-    <ClCompile Include="AudioEngine.cpp" />
-    <ClCompile Include="Bengine.cpp" />
-    <ClCompile Include="Camera2D.cpp" />
-    <ClCompile Include="BengineErrors.cpp" />
-    <ClCompile Include="GLSLProgram.cpp" />
-    <ClCompile Include="ImageLoader.cpp" />
-    <ClCompile Include="IMainGame.cpp" />
-    <ClCompile Include="ImGuiManager.cpp" />
-    <ClCompile Include="InputManager.cpp" />
-    <ClCompile Include="IOManager.cpp" />
-    <ClCompile Include="ParticleBatch2D.cpp" />
-    <ClCompile Include="ParticleEngine2D.cpp" />
-    <ClCompile Include="picoPNG.cpp" />
-    <ClCompile Include="ResourceManager.cpp" />
-    <ClCompile Include="ScreenList.cpp" />
-    <ClCompile Include="Sprite.cpp" />
-    <ClCompile Include="SpriteBatch.cpp" />
-    <ClCompile Include="SpriteFont.cpp" />
-    <ClCompile Include="TextureCache.cpp" />
-    <ClCompile Include="Timing.cpp" />
-    <ClCompile Include="Window.cpp" />
+    <ClInclude Include="App.h" />
+    <ClInclude Include="Box.h" />
+    <ClInclude Include="GameplayScreen.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\deps\include\ImGui\imgui.h" />
-    <ClInclude Include="..\deps\include\ImGui\imgui_internal.h" />
-    <ClInclude Include="AudioEngine.h" />
-    <ClInclude Include="Bengine.h" />
-    <ClInclude Include="Camera2D.h" />
-    <ClInclude Include="BengineErrors.h" />
-    <ClInclude Include="GLSLProgram.h" />
-    <ClInclude Include="GLTexture.h" />
-    <ClInclude Include="IGameScreen.h" />
-    <ClInclude Include="ImageLoader.h" />
-    <ClInclude Include="IMainGame.h" />
-    <ClInclude Include="ImGuiManager.h" />
-    <ClInclude Include="InputManager.h" />
-    <ClInclude Include="IOManager.h" />
-    <ClInclude Include="ParticleBatch2D.h" />
-    <ClInclude Include="ParticleEngine2D.h" />
-    <ClInclude Include="picoPNG.h" />
-    <ClInclude Include="ResourceManager.h" />
-    <ClInclude Include="ScreenList.h" />
-    <ClInclude Include="Sprite.h" />
-    <ClInclude Include="SpriteBatch.h" />
-    <ClInclude Include="SpriteFont.h" />
-    <ClInclude Include="TextureCache.h" />
-    <ClInclude Include="Timing.h" />
-    <ClInclude Include="Vertex.h" />
-    <ClInclude Include="Window.h" />
+    <ClCompile Include="App.cpp" />
+    <ClCompile Include="Box.cpp" />
+    <ClCompile Include="GameplayScreen.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
