--- a/NickProjects/graphicsTutorials/BallGame/imgui.ini
+++ b/NickProjects/graphicsTutorials/BallGame/imgui.ini
@@ -1,12 +1,15 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Settings]
-Pos=1177,878
+Pos=26,35
 Size=667,289
+Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=1035,265
 Size=550,680
+Collapsed=0
 
